@@ -1,3 +1,8 @@
+2007-11-13  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclCompCmds.c (TclCompileRegexpCmd): clean up comments,
+	only free dstring on OK from TclReToGlob.
+
 2007-11-14  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/regc*.c: #ifdef/comment out the code that deals with
